<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashScreenActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorCream"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginEnd="220dp"
                android:background="@drawable/btn_rounded5"
                android:padding="10dp"
                android:src="@drawable/polibatam" />

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/btn_rounded5"
                android:padding="16dp"
                android:src="@drawable/mj" />


        </LinearLayout>


        <ImageView
            android:id="@+id/logo"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:layout_marginTop="70dp"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:contentDescription="@string/logo"
            android:padding="@dimen/activity_vertical_margin"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:gravity="center"
            android:text="@string/judul"
            android:textColor="@color/colorPrimary2"
            android:textSize="24sp"
            android:textStyle="bold" />

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/loadImage"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:src="@drawable/loading" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginTop="100dp"
            android:background="@drawable/btn_rounded"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/versi"
            android:textColor="@android:color/white" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>